--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-elephantly_resource_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: elephantlyResourceBundle:Default:index }
+# elephantly_resource_homepage:
+#     pattern:  /resource/{name}
+#     defaults: { _controller: ElephantlyResourceBundle:Default:index }
